--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
-// root build.gradle
 subprojects {
     group = 'com.naverrain'
     version = '1.0'
 
     repositories {
         mavenCentral()
+    }
+
+    ext {
+        springVersion = '5.3.23'
     }
 
     apply plugin: 'java'
@@ -25,9 +28,12 @@ subprojects {
         implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
         implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
         implementation 'com.lmax:disruptor:3.3.4'
+
+        implementation "org.springframework:spring-core:$springVersion"
+        implementation "org.springframework:spring-beans:$springVersion"
+        implementation "org.springframework:spring-context:$springVersion"
     }
 
-    // Ensure the web module applies the 'war' plugin in its specific build.gradle
     if (project.name == 'web') {
         apply plugin: 'war'
     }
