--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,5 +2,5 @@ apply plugin: 'java'
 
 dependencies {
     implementation project(':persistence')
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
 }
