--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'java'
 dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
-    implementation 'org.hibernate:hibernate-core:6.1.1.Final'
-    implementation 'org.hibernate:hibernate-c3p0:6.1.1.Final'
+
+    implementation "javax.persistence:javax.persistence-api:2.2"
+    implementation "org.hibernate:hibernate-core:5.6.14.Final"
+    implementation "org.hibernate:hibernate-c3p0:5.6.14.Final"
+    implementation "org.hibernate:hibernate-validator:6.2.5.Final"
 }
