--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'java'
 
+ext {
+    securityVersion = '5.8.1'
+}
+
 dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
@@ -8,4 +12,6 @@ dependencies {
     implementation "org.hibernate:hibernate-core:5.6.14.Final"
     implementation "org.hibernate:hibernate-c3p0:5.6.14.Final"
     implementation "org.hibernate:hibernate-validator:6.2.5.Final"
+
+    implementation"org.springframework.security:spring-security-core:$securityVersion"
 }
