--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'war'
 
 ext {
+    securityVersion = '5.8.1'
     springVersion = '5.3.23'
 }
 
@@ -14,5 +15,11 @@ dependencies {
     implementation "javax.validation:validation-api:2.0.1.Final"
     providedCompile "javax.servlet.jsp:jsp-api:2.2"
     implementation "javax.servlet:jstl:1.2"
+    implementation "javax.transaction:javax.transaction-api:1.3"
     implementation "org.springframework:spring-webmvc:$springVersion"
+
+    implementation "org.springframework.security:spring-security-core:$securityVersion"
+    implementation "org.springframework.security:spring-security-web:$securityVersion"
+    implementation "org.springframework.security:spring-security-config:$securityVersion"
+
 }
